--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-icons": "^5.1.0",
     "react-router-dom": "^6.23.0",
     "react-spinners": "^0.13.8",
+    "sweetalert2": "^11.10.8",
     "swiper": "^11.1.1",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7"
